--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="js/box.js"></script>
   </head>
-  <body style="background-color: #aaaaaa">
+  <body>
     <a-scene> 
+      <a-sky material="color: #87CEEB"></a-sky>
+      <a-entity light="type: ambient; color: #BBB"></a-entity>
+      <a-entity 
+        light="type: directional; color: #EEE; intensity: 1"
+        position="2 7 -3"></a-entity>
+      <a-entity camera look-controls wasd-controls 
+        position="0 1.5 0"
+        rotation="0 0 0"></a-entity>
       <a-assets>
         <a-asset-item id="slime-obj" src="assets/slimemodel.obj"></a-asset-item>
         <a-asset-item id="slime-mtl" src="assets/slimemodel.mtl"></a-asset-item>
@@ -23,7 +31,7 @@
       <a-entity
         geometry="primitive: sphere; radius: 1.25"
         position="0 1.25 -5"
-        material="color: #00FF00; shader: standard; src: images/bricks.jpg"      
+        material="shader: standard; src: assets/earth.jpg"      
         ></a-entity>
       <a-entity 
         obj-model="obj: #slime-obj"
