--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Hello, World! - A-Frame">
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="js/box.js"></script>
+    <script src="js/earth.js"></script>
   </head>
   <body>
     <a-scene> 
@@ -28,7 +29,7 @@
         position="-1 4 -6"
         material="color: #4CC3D9; shader: standard; src: images/bricks.jpg"
         ></a-entity>
-      <a-entity
+      <a-entity earth
         geometry="primitive: sphere; radius: 1.25"
         position="0 1.25 -5"
         material="shader: standard; src: assets/earth.jpg"      
