--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> 
     <meta charset="utf-8">
     <title>APCSP A-Frame Demo Shapes</title>
-    <meta name="description" content="Hello, World! - A-Frame">
+    <meta name="description" content="APCSP A-Frame Demo Shapes">
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="js/box.js"></script>
     <script src="js/earth.js"></script>
